k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /products
            pathType: Prefix

            backend:
              service:
                name: product-service
                port:
                  number: 8080

          - path: /orders
            pathType: Prefix

            backend:
              service:
                name: order-service
                port:
                  number: 8081
